--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold mb-7">
           It's good <br>
           tea time at The <br> Tea House</h1>
-        <p class="text-lg font-medium text-[#777777] mb-7">Tea and Botanical Solutions Supplier Give Optimum <br>
+        <p class="text-lg text-[#777777] mb-7">Tea and Botanical Solutions Supplier Give Optimum <br>
           Satisfaction To Your Taste Buds.</p>
         <button class="rounded-xl p-4 text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More <i
             class="fa-solid fa-arrow-right -rotate-45"></i></button>
@@ -53,6 +53,68 @@
         </div>
       </div>
     </header>
+
+    <!-- Featured product section -->
+    <section class="mt-16">
+      <div class="text-center">
+        <h3 class="text-5xl font-extrabold mb-5">Our Featured Products</h3>
+        <p class="mb-12 max-w-4xl mx-auto">There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+      <div class="md:grid grid gap-3 md:gap-5 md:grid-cols-2 lg:grid lg:grid-cols-4">
+        <div
+          class="text-center rounded-xl p-7 bg-gradient-to-b from-[#F4F7B4] from-10% via-[#B4F4F4] via-50% to-[#F4F4F4] to-100%">
+          <img class="mx-auto mb-7" src="./images/tea-1.png" alt="">
+          <h3 class="font-extrabold text-2xl mb-3">Milk Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <div
+          class="text-center rounded-xl p-7 bg-gradient-to-b from-[#F4F7B4] from-10% via-[#B4F4F4] via-50% to-[#F4F4F4] to-100%">
+          <img class="mx-auto mb-7" src="./images/tea-1.png" alt="">
+          <h3 class="font-extrabold text-2xl mb-3">Milk Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <div
+          class="text-center rounded-xl p-7 bg-gradient-to-b from-[#F4F7B4] from-10% via-[#B4F4F4] via-50% to-[#F4F4F4] to-100%">
+          <img class="mx-auto mb-7" src="./images/tea-1.png" alt="">
+          <h3 class="font-extrabold text-2xl mb-3">Milk Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <div
+          class="text-center rounded-xl p-7 bg-gradient-to-b from-[#F4F7B4] from-10% via-[#B4F4F4] via-50% to-[#F4F4F4] to-100%">
+          <img class="mx-auto mb-7" src="./images/tea-1.png" alt="">
+          <h3 class="font-extrabold text-2xl mb-3">Milk Tea</h3>
+          <p class="text-[#777777] font-semibold">Creamer could be replaced by fresh milk</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="lg:grid lg:grid-cols-2 md:grid md:grid-cols-2 gap-8 mt-40 ">
+      <div class="lg:grid md:grid md:gap-4 md:grid-cols-2 md:grid-rows-3 w-full">
+              <div class="bg-gradient-to-r from-rose-50 rounded-md h-38"></div>
+               <div class="bg-[#FFA623]/[.1] row-span-2 rounded-md">
+                   <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
+               </div>
+               <div class="rounded-md bg-[#577639]/[.1] row-span-2">
+                 <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
+               </div>
+               <div class="bg-gradient-to-r from-gray-300 rounded-md h-38"></div>
+      </div>
+      <div class="space-y-6">
+        <h1 class="font-bold text-3xl text-[#1C1C1C]">Great Tea, Freshly <br> Presented</h1>
+        <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
+          the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+          custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h4 class="font-bold text-xl">Unique Taste</h4>
+          <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h4 class="font-bold text-xl">Premium Quality</h4>
+          <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+      </div>
+    </section>
   </main>
 </body>
 
