--- a/index.html
+++ b/index.html
@@ -94,28 +94,177 @@
     </section>
 
     <section class="lg:grid lg:grid-cols-2 md:grid md:grid-cols-2 gap-8 mt-40 ">
-      <div class="lg:grid md:grid md:gap-4 md:grid-cols-2 md:grid-rows-3 w-full">
-              <div class="bg-gradient-to-r from-rose-50 rounded-md h-38"></div>
-               <div class="bg-[#FFA623]/[.1] row-span-2 rounded-md">
-                   <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
-               </div>
-               <div class="rounded-md bg-[#577639]/[.1] row-span-2">
-                 <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
-               </div>
-               <div class="bg-gradient-to-r from-gray-300 rounded-md h-38"></div>
+      <div class="lg:grid md:grid md:gap-4 md:grid-cols-2 md:grid-rows-3 space-y-4 md:space-y-0">
+        <div class="bg-gradient-to-r from-rose-50 rounded-md h-38"></div>
+        <div class="p-4 md:p-0 bg-[#FFA623]/[.1] row-span-2 rounded-md">
+          <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
+        </div>
+        <div class="rounded-md p-4 md:p-0 bg-[#577639]/[.1] row-span-2">
+          <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
+        </div>
+        <div class="bg-gradient-to-r from-gray-300 rounded-md h-38"></div>
       </div>
       <div class="space-y-6">
         <h1 class="font-bold text-3xl text-[#1C1C1C]">Great Tea, Freshly <br> Presented</h1>
-        <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
+        <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+          possessions . It represents
           the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
           custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
-          <h4 class="font-bold text-xl">Unique Taste</h4>
-          <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-          <h4 class="font-bold text-xl">Premium Quality</h4>
-          <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        <h4 class="font-bold text-xl">Unique Taste</h4>
+        <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist
+          impression</p>
+        <h4 class="font-bold text-xl">Premium Quality</h4>
+        <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
       </div>
     </section>
+
+    <section class="mt-24 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl">
+
+      <div class="md:grid md:grid-cols-2 p-20 gap-8">
+        <!-- meet our super client -->
+        <div class="flex items-center justify-center">
+          <div class="space-y-5">
+            <h2 class="text-[#F4F4F4] text-5xl">Meet Our Super Clients</h2>
+            <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority
+              have suffered alteration
+              in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="bg-white rounded-md py-3 px-7 text-xl font-semibold 
+            ">
+              <div class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-transparent bg-clip-text">Show All</div>
+            </button>
+          </div>
+        </div>
+
+        <!-- client review -->
+        <div class="mt-16 md:mt-0">
+
+          <div class="relative space-y-9">
+
+            <div class="md:absolute md:top-28 p-10 bg-white rounded-md md:z-10">
+              <div class="absolute rounded-full bg-white p-1 -top-8 -left-8"><img class="" src="./images/client.png"
+                  alt="">
+              </div>
+              <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to
+                treatment</p>
+              <h4 class="font-semibold">Ilham Yuda</h4>
+              <p class="text-[#777777]">Businessman</p>
+            </div>
+
+            <div class="relative p-10 bg-white rounded-md md:-top-5 md:opacity-40 md:w-3/4 md:left-36">
+              <div class="absolute rounded-full bg-white p-1 -top-8 -left-8"><img src="./images/client.png" alt="">
+              </div>
+              <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to
+                treatment</p>
+              <h4 class="font-semibold">Ilham Yuda</h4>
+              <p class="text-[#777777]">Businessman</p>
+            </div>
+
+            <div class="relative md:-bottom-5 p-10 bg-white rounded-md md:opacity-40 md:w-3/4 md:left-36">
+              <div class="absolute rounded-full bg-white p-1 -top-8 -left-8"><img src="./images/client.png" alt="">
+              </div>
+              <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to
+                treatment</p>
+              <h4 class="font-semibold">Ilham Yuda</h4>
+              <p class="text-[#777777]">Businessman</p>
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+    </section>
+
+    <!-- News and Events -->
+    <section class="mt-32">
+      <div class="text-center">
+        <h2 class="mb-5 font-bold text-4xl text-[#1C1C1C]">News and Events</h2>
+        <p class="mb-12 text-[#777777">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+
+      <div class="grid gap-3 md:grid md:gap-6 md:grid-cols-3">
+          <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
+              <img class="w-full" src="./images/news-1.png" alt="">
+              <p class="text-[#777777]">Feb 05, 2027</p>
+              <h4 class="font-bold">Collecting 8 points for discount</h4>
+              <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+              <p class="font-bold">Learn More</p>
+          </div>
+
+          <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
+            <img class="w-full" src="./images/news-2.png" alt="">
+            <p class="text-[#777777]">Feb 05, 2027</p>
+            <h4 class="font-bold">Collecting 8 points for discount</h4>
+            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+            <p class="font-bold">Learn More</p>
+        </div>
+
+        <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
+          <img class="w-full" src="./images/news-3.png" alt="">
+          <p class="text-[#777777]">Feb 05, 2027</p>
+          <h4 class="font-bold">Collecting 8 points for discount</h4>
+          <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <p class="font-bold">Learn More</p>
+      </div>
+      </div>
+    </section>
+
+    
   </main>
+  <footer class="mt-20 bg-red-100">
+     <section class="w-5/6 max-w-screen-xl mx-auto py-16">
+      <div class="flex justify-between items-center">
+        <img src="./images/cup.png" alt="">
+        <div class="flex items-center gap-6">
+           <p>Ready to get strated?</p>
+           <button class="bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100% 
+           px-6 py-3 text-white rounded-md">Get Started</button>
+        </div>
+      </div>
+  
+      <div class="grid gap-y-5 md:grid md:grid-cols-2 md:gap-y-5 md:gap-30 lg:grid-cols-4 mt-24">
+          <div class="space-y-2">
+              <h4 class="font-bold text-[#1C1C1C]">Quick Links</h4>
+              <p class="text-[#494949] font-normal text-sm"><a href="">Home</a></p>
+              <p class="text-[#494949] font-normal text-sm"><a href="">About Us</a></p>
+              <p class="text-[#494949] font-normal text-sm"><a href="">Insurance</a></p>
+              <p class="text-[#494949] font-normal text-sm"><a href="">Privacy Policy</a></p>
+          </div>
+  
+          <div class="space-y-2">
+            <h4 class="font-bold text-[#1C1C1C]">Our Service</h4>
+            <p class="text-[#494949] font-normal text-sm"><a href="">Life Insurance</a></p>
+            <p class="text-[#494949] font-normal text-sm"><a href="">Car Insurance</a></p>
+            <p class="text-[#494949] font-normal text-sm"><a href="">Health Insurance</a></p>
+            <p class="text-[#494949] font-normal text-sm"><a href="">House Insurance</a></p>
+        </div>
+  
+        <div class="space-y-2">
+          <h4 class="font-bold text-[#1C1C1C]">Help</h4>
+          <p class="text-[#494949] font-normal text-sm"><a href="">FAQs</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Contact Us</a></p>
+      </div>
+  
+      <div>
+          <h4 class="font-bold text-lg text-[#1C1C1C] mb-8">Subscribe to our newsletter</h4>
+          <div class="flex gap-8 items-center border-b border-[#1C1C1C] mb-8">
+              <p>Email address</p> 
+                <i class="p-2 fa-solid fa-greater-than rounded-full text-white bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100%"></i></div>
+          <div class="flex gap-3">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+      </div>
+    </div>
+     </section>
+</footer>
+ 
 </body>
 
 </html>
