--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=q">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tea House</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/93ea47e651.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
+  <!-- <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -20,18 +20,18 @@
         }
       }
     }
-  </script>
-  <style>
+  </script> -->
+  <!-- <style>
     .manrope-font {
       font-family: "Manrope", sans-serif;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
   <!-- Main content -->
-  <main class="max-w-screen-xl mx-auto md:px-16 px-5">
-    <header class="lg:flex md:flex ">
+  <main class="max-w-screen-xl mx-auto p-5">
+    <header class="md:flex">
       <div>
         <h1 class="text-4xl md:text-5xl lg:text-7xl font-extrabold mb-7">
           It's good <br>
@@ -41,8 +41,9 @@
         <button class="rounded-xl p-4 text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More <i
             class="fa-solid fa-arrow-right -rotate-45"></i></button>
       </div>
+
       <div class="relative">
-        <div><img class="w-full" src="./images/banner.png" alt=""></div>
+        <div><img class="w-ful" src="./images/banner.png" alt=""></div>
         <div class="absolute flex items-center rounded-xl shadow-xl shadow-[#rgba(0, 0, 0, 0.06)] 
         px-4 py-5 ml-28 md:ml-28 lg:ml-44 -mt-16 bg-white">
           <i class="fa-solid fa-star text-amber-300 mr-4 text-2xl"></i>
@@ -172,36 +173,34 @@
             </div>
 
           </div>
-
         </div>
-
-
       </div>
     </section>
 
-    <!-- News and Events -->
+   <!-- News and Events -->
     <section class="mt-32">
       <div class="text-center">
         <h2 class="mb-5 font-bold text-4xl text-[#1C1C1C]">News and Events</h2>
-        <p class="mb-12 text-[#777777">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        <p class="mb-12 text-[#777777">There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in
           some form, by injected humour, or randomised words which don't look even slightly believable. </p>
       </div>
 
       <div class="grid gap-3 md:grid md:gap-6 md:grid-cols-3">
-          <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
-              <img class="w-full" src="./images/news-1.png" alt="">
-              <p class="text-[#777777]">Feb 05, 2027</p>
-              <h4 class="font-bold">Collecting 8 points for discount</h4>
-              <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
-              <p class="font-bold">Learn More</p>
-          </div>
+        <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
+          <img class="w-full" src="./images/news-1.png" alt="">
+          <p class="text-[#777777]">Feb 05, 2027</p>
+          <h4 class="font-bold">Collecting 8 points for discount</h4>
+          <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <p class="font-bold">Learn More</p>
+        </div>
 
-          <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
-            <img class="w-full" src="./images/news-2.png" alt="">
-            <p class="text-[#777777]">Feb 05, 2027</p>
-            <h4 class="font-bold">Collecting 8 points for discount</h4>
-            <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
-            <p class="font-bold">Learn More</p>
+        <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
+          <img class="w-full" src="./images/news-2.png" alt="">
+          <p class="text-[#777777]">Feb 05, 2027</p>
+          <h4 class="font-bold">Collecting 8 points for discount</h4>
+          <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+          <p class="font-bold">Learn More</p>
         </div>
 
         <div class="border-[#D2C2D2] border rounded-md p-5 space-y-3">
@@ -210,61 +209,62 @@
           <h4 class="font-bold">Collecting 8 points for discount</h4>
           <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
           <p class="font-bold">Learn More</p>
-      </div>
+        </div>
       </div>
     </section>
-
-    
   </main>
+ 
   <footer class="mt-20 bg-red-100">
-     <section class="w-5/6 max-w-screen-xl mx-auto py-16">
+    <section class="w-5/6 max-w-screen-xl mx-auto py-16">
       <div class="flex justify-between items-center">
         <img src="./images/cup.png" alt="">
         <div class="flex items-center gap-6">
-           <p>Ready to get strated?</p>
-           <button class="bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100% 
+          <p>Ready to get strated?</p>
+          <button class="bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100% 
            px-6 py-3 text-white rounded-md">Get Started</button>
         </div>
       </div>
-  
+
       <div class="grid gap-y-5 md:grid md:grid-cols-2 md:gap-y-5 md:gap-30 lg:grid-cols-4 mt-24">
-          <div class="space-y-2">
-              <h4 class="font-bold text-[#1C1C1C]">Quick Links</h4>
-              <p class="text-[#494949] font-normal text-sm"><a href="">Home</a></p>
-              <p class="text-[#494949] font-normal text-sm"><a href="">About Us</a></p>
-              <p class="text-[#494949] font-normal text-sm"><a href="">Insurance</a></p>
-              <p class="text-[#494949] font-normal text-sm"><a href="">Privacy Policy</a></p>
-          </div>
-  
-          <div class="space-y-2">
-            <h4 class="font-bold text-[#1C1C1C]">Our Service</h4>
-            <p class="text-[#494949] font-normal text-sm"><a href="">Life Insurance</a></p>
-            <p class="text-[#494949] font-normal text-sm"><a href="">Car Insurance</a></p>
-            <p class="text-[#494949] font-normal text-sm"><a href="">Health Insurance</a></p>
-            <p class="text-[#494949] font-normal text-sm"><a href="">House Insurance</a></p>
+        <div class="space-y-2">
+          <h4 class="font-bold text-[#1C1C1C]">Quick Links</h4>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Home</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">About Us</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Insurance</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Privacy Policy</a></p>
         </div>
-  
+
+        <div class="space-y-2">
+          <h4 class="font-bold text-[#1C1C1C]">Our Service</h4>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Life Insurance</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Car Insurance</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">Health Insurance</a></p>
+          <p class="text-[#494949] font-normal text-sm"><a href="">House Insurance</a></p>
+        </div>
+
         <div class="space-y-2">
           <h4 class="font-bold text-[#1C1C1C]">Help</h4>
           <p class="text-[#494949] font-normal text-sm"><a href="">FAQs</a></p>
           <p class="text-[#494949] font-normal text-sm"><a href="">Contact Us</a></p>
-      </div>
-  
-      <div>
+        </div>
+
+        <div>
           <h4 class="font-bold text-lg text-[#1C1C1C] mb-8">Subscribe to our newsletter</h4>
           <div class="flex gap-8 items-center border-b border-[#1C1C1C] mb-8">
-              <p>Email address</p> 
-                <i class="p-2 fa-solid fa-greater-than rounded-full text-white bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100%"></i></div>
+            <p>Email address</p>
+            <i
+              class="p-2 fa-solid fa-greater-than rounded-full text-white bg-gradient-to-r from-[#FF8938] from-56% to-[#FF0000] to-100%"></i>
+          </div>
           <div class="flex gap-3">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
           </div>
+        </div>
       </div>
-    </div>
-     </section>
-</footer>
- 
+    </section>
+  </footer>
+
 </body>
 
 </html>
