--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/93ea47e651.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- <script>
+  <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
             clifford: '#da373d',
+          },
+          
+          fontFamily: {
+            manrope: ['manrope', 'sans-serif']
           }
         }
       }
     }
-  </script> -->
-  <!-- <style>
-    .manrope-font {
-      font-family: "Manrope", sans-serif;
-    }
-  </style> -->
+  </script>
+
 </head>
 
-<body>
+<body class="font-manrope">
   <!-- Main content -->
   <main class="max-w-screen-xl mx-auto p-5">
     <header class="md:flex">
